--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,280 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat Energy</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <div class="privet">PRqIVdET12354</div>
-    <section class="actions">
-      <div class="actions__group">
-        <button class="actions__button">RAZ</button>
-        <button class="actions__button actions__button--warning">DVA</button>
+    <header class="header">
+      <div class="header__logo">
+        <img
+          class="header__logo--mobile"
+          src="svg/logo-mobile.svg"
+          alt="Logo CatEnergy"
+          width="34px"
+        />
+        <img
+          class="header__logo--main"
+          src="svg/logo-text-mobile.svg"
+          alt="CatEnergy"
+          width="100px"
+        />
+        <img
+          class="header__logo--menu-close header__logo--icon-hidden"
+          src="svg/logo-close-menu-mobile.svg"
+          alt="CatEnergy_close"
+          width="18px"
+        />
+        <img
+          class="header__logo--menu-icon"
+          src="svg/logo-menu-icon-mobile.svg"
+          alt="CatEnergy_menu-icon"
+          width="24px"
+        />
+      </div>
+      <nav class="header__navigation">
+        <ul class="header__navigation--list">
+          <li class="header__navigation--list-item">
+            <a href="#" class="header__navigation--list-link">Главная</a>
+          </li>
+          <li class="header__navigation--list-item">
+            <a href="#" class="header__navigation--list-link"
+              >Каталог продукции</a
+            >
+          </li>
+          <li class="header__navigation--list-item">
+            <a href="#" class="header__navigation--list-link"
+              >Подбор программы</a
+            >
+          </li>
+        </ul>
+      </nav>
+
+      <div class="header__wide">
+        <img
+          class="header__wide-logo--tablet"
+          srcset="svg/logo-tablet.svg"
+          alt="Logo CatEnergy"
+          width="174px"
+        />
+        <img
+          class="header__wide-logo--desktop"
+          srcset="svg/logo-desktop.svg"
+          alt="Logo CatEnergy"
+          width="202px"
+        />
+        <nav class="header__wide-navigation">
+          <ul class="header__wide-list">
+            <li class="header__wide-item header__wide-item--active">
+              <a class="header__wide-link" href="#">Главная</a>
+            </li>
+            <li class="header__wide-item">
+              <a class="header__wide-link" href="#">Каталог продукции</a>
+            </li>
+            <li class="header__wide-item">
+              <a class="header__wide-link" href="#">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section class="offer">
+      <div class="offer__wrapper">
+        <h2 class="offer__title">
+          Функциональное <br />
+          питание для котов
+        </h2>
+        <p class="offer__text">Занялся собой? Займись котом!</p>
+        <img class="offer__pic-mobile" src="img/catenergy-food-mobile.png" />
+        <img class="offer__pic-tablet" src="img/catenergy-food-tablet.png" />
+        <img class="offer__pic-desktop" src="img/catenergy-food-desktop.png" />
+      </div>
+      <button class="offer__button" type="button">Подобрать программу</button>
+      <img class="offer__pic-background" src="img/cat-background-desktop.png" />
+    </section>
+    <section class="programs">
+      <div class="programs__wrapper">
+        <div class="programs__content">
+          <div class="programs__top">
+            <img
+              class="programs__pic"
+              src="img/program-cat.png"
+              alt="Black Cat"
+            />
+            <h2 class="programs__title">Похудение</h2>
+          </div>
+          <p class="programs__text">
+            Ваш кот весит больше собаки и почти утратил способность лазить по
+            деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
+            сбросить лишний вес.
+          </p>
+          <button class="programs__button" type="button">
+            Каталог Slim
+            <img class="programs__arrow" src="svg/icon-arrow.svg" alt="Arrow" />
+          </button>
+        </div>
+        <img
+          class="programs__pic-big"
+          src="img/program-cat-big.png"
+          alt="Black Cat"
+        />
+      </div>
+      <div class="programs__wrapper">
+        <div class="programs__content">
+          <div class="programs__top">
+            <img
+              class="programs__pic programs__pic--jaguar"
+              src="img/program-jaguar.png"
+              alt="Black Jaguar"
+            />
+            <h2 class="programs__title">Набор массы</h2>
+          </div>
+          <p class="programs__text">
+            Заработать авторитет среди дворовых котов и даже собак? Серия Cat
+            Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <button class="programs__button" type="button">
+            Каталог Pro
+            <img class="programs__arrow" src="svg/icon-arrow.svg" alt="Arrow" />
+          </button>
+        </div>
+        <img
+          class="programs__pic-big programs__pic-big--jaguar"
+          src="img/program-jaguar-big.png"
+          alt="Black Jaguar"
+        />
       </div>
     </section>
+    <section class="work">
+      <h2 class="work__title">Как это работает</h2>
+      <ul class="work__list">
+        <li class="work__item">
+          <img class="work__img" src="svg/work-leaf.svg" />
+          <p class="work__text">
+            Функциональное питание содержит только полезные питательные
+            вещества.
+          </p>
+          <img class="work__back" src="img/work-back-1.png" />
+        </li>
+        <li class="work__item">
+          <img class="work__img" src="svg/work-cup.svg" />
+          <p class="work__text">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и
+            готово.
+          </p>
+          <img class="work__back" src="img/work-back-2.png" />
+        </li>
+        <li class="work__item">
+          <img class="work__img" src="svg/work-fork.svg" />
+          <p class="work__text">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </p>
+          <img class="work__back" src="img/work-back-3.png" />
+        </li>
+        <li class="work__item">
+          <img class="work__img" src="svg/work-clock.svg" />
+          <p class="work__text">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </p>
+          <img class="work__back" src="img/work-back-4.png" />
+        </li>
+      </ul>
+    </section>
+    <section class="example">
+      <div class="example__wrapper">
+        <div class="example__inside">
+          <h2 class="example__title">Живой пример</h2>
+
+          <p class="example__text">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+            этом он не менял своих привычек и по-прежнему спит по 16 часов в
+            день.
+          </p>
+          <div class="example__content">
+            <div class="example__numbers">
+              <div class="example__indicators">
+                5 КГ
+                <div class="example__indicators-text">снижение веса</div>
+              </div>
+              <div class="example__indicators example__indicators-time">
+                60 ДНЕЙ
+                <div
+                  class="example__indicators-text example__indicators-text--time"
+                >
+                  затрачено времени
+                </div>
+              </div>
+            </div>
+            <div class="example__cost">
+              <p class="example__spending">Затраты на питание:</p>
+              <p class="example__price">15 000 РУБ.</p>
+            </div>
+          </div>
+        </div>
+        <div class="example__demonstration">
+          <div id="cats-scroll" class="example__img-mobile">
+            <img
+              class="example__before-mobile"
+              src="img/before-mobile.png"
+              alt="Example Cat"
+            />
+            <img
+              class="example__after-mobile"
+              src="img/after-mobile.png"
+              alt="Example Cat"
+            />
+          </div>
+          <div class="example__img">
+            <img
+              class="example__before"
+              src="img/before-mobile.png"
+              alt="Example Cat"
+            />
+            <img
+              class="example__after"
+              src="img/after-mobile.png"
+              alt="Example Cat"
+            />
+          </div>
+          <div class="example__bottom">
+            <div class="example__results">
+              <p class="example__results-text">Было</p>
+              <div id="switch-cat-button" class="example__results-white">
+                <div id="switch-cat-inner" class="example__results-green"></div>
+              </div>
+              <input class="example__slider" type="range" />
+              <p class="example__results-text">Стало</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="example__bg-desktop"></div>
+    </section>
+    <script>
+      const button = document.getElementById("switch-cat-button");
+      const inner = document.getElementById("switch-cat-inner");
+      const enabledClass = "example__results-green--enabled";
+      const scrollContainer = document.getElementById("cats-scroll");
+
+      function toggleCatButton() {
+        const isDisabled = !inner.classList.contains(enabledClass);
+
+        if (isDisabled) {
+          inner.classList.add(enabledClass);
+          scrollContainer.scrollTo({ left: 311, behavior: "smooth" });
+        } else {
+          inner.classList.remove(enabledClass);
+          scrollContainer.scrollTo({ left: -311, behavior: "smooth" });
+        }
+      }
+
+      button.addEventListener("click", toggleCatButton);
+    </script>
   </body>
 </html>
